# EveApps-BT82X

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: build.yml
DemoApp/Bedside_Monitor/: Readme.txt
DemoApp/PhotoBooth/: .gitignore  Readme.md
DemoApp/PhotoBooth/src/components/EW2024_Photobooth/: CMakeLists.txt  EW2024_Photobooth.c  Page_Camera.c  Page_Camera_Effect.c  Page_Glow.c  Page_Keyboard.c  Page_Playback.c  Page_Screenshot.c  Page_Sketch.c  Page_Sticker.c  Page_Taskbar.c  Page_Zoom.c
DemoApp/PhotoBooth/src/components/EW2024_Photobooth/include/: EW2024_Photobooth.h
DemoApp/PhotoBooth/src/components/EW2024_Photobooth_Utils/: Bitmap_Handler.c  Bitmap_Handler.h  CMakeLists.txt  Ddr.c  Ddr.h  Draw.c  Draw.h  EW2024_Photobooth_Utils.c  Gesture.c  Gesture.h  Image.c  Image.h  Paging.c  Paging.h  Phost.c  Phost.h  Scanout.c  Scanout.h  Tags.c  Tags.h  Timer.c  Timer.h
DemoApp/PhotoBooth/src/components/EW2024_Photobooth_Utils/include/: EW2024_Photobooth_Utils.h
Docs/Doxygen/: Doxyfile  README.md  doxygen.header.html
SampleApp/: CMakeLists.txt  Readme.txt  SampleApp_MSVC.sln
SampleApp/Animation/: CMakeLists.txt  Readme.txt
SampleApp/Animation/Hdr/: Animation.h
SampleApp/Animation/Project/Msvc/: Animation_MSVC.sln  Animation_Msvc.vcxproj  Animation_Msvc.vcxproj.filters
SampleApp/Animation/Src/: Animation.c
SampleApp/Animation/Test/: abstract.anim.ram_g.reloc  abstract.anim.reloc
SampleApp/Animation/Test/Flash/: flash.map
SampleApp/Audio/: CMakeLists.txt  Readme.txt
SampleApp/Audio/Hdr/: Audio.h
SampleApp/Audio/Project/Msvc/: Audio_MSVC.sln  Audio_Msvc.vcxproj  Audio_Msvc.vcxproj.filters
SampleApp/Audio/Src/: Audio.c
SampleApp/Audio/Test/: perfect_beauty.raw
SampleApp/Audio/Test/Flash/: flash.map
SampleApp/Bitmap/: CMakeLists.txt  Readme.txt
SampleApp/Bitmap/Hdr/: Bitmap.h
SampleApp/Bitmap/Project/Msvc/: Bitmap_MSVC.sln  Bitmap_Msvc.vcxproj  Bitmap_Msvc.vcxproj.filters
SampleApp/Bitmap/Src/: Bitmap.c
SampleApp/Bitmap/Test/: bird_320x240_L1.raw  bird_320x240_L2.raw  bird_320x240_RGB565.raw  case_180x180_ARGB6.raw  case_180x180_ARGB8.raw  case_181x185_PALETTEDARGB8.index.raw  case_181x185_PALETTEDARGB8.lut.raw  fu_168x960_ASTC_4X4.raw  fu_168x960_COMPRESSED_RGBA_ASTC_4x4_KHR.raw  mandrill256_256x256_LA1.raw  mandrill256_256x256_LA2.raw  mandrill256_256x256_LA4.raw  mandrill256_256x256_LA8.raw  mandrill256_256x256_RGB6.raw  mandrill256_256x256_YCbCr.raw
SampleApp/Bitmap/Test/Flash/: flash.map
SampleApp/Extension/: CMakeLists.txt  Readme.txt
SampleApp/Extension/Hdr/: Extension.h  Patch.h
SampleApp/Extension/Project/Msvc/: Extension_MSVC.sln  Extension_Msvc.vcxproj  Extension_Msvc.vcxproj.filters
SampleApp/Extension/Src/: Extension.c  Patch_Base.c  base.c
SampleApp/Flash/: Readme.txt
SampleApp/Flash/Hdr/: Flash.h
SampleApp/Flash/Project/Msvc/: Flash_MSVC.sln  Flash_Msvc.vcxproj  Flash_Msvc.vcxproj.filters
SampleApp/Flash/Src/: Flash.c
SampleApp/Flash/Test/SDCard/: flash.map
SampleApp/Font/: CMakeLists.txt  Readme.txt
SampleApp/Font/Hdr/: Font.h
SampleApp/Font/Project/Msvc/: Font_MSVC.sln  Font_Msvc.vcxproj  Font_Msvc.vcxproj.filters
SampleApp/Font/Src/: Font.c
SampleApp/Font/Test/: Roboto-BoldCondensed_30_L1.raw  Roboto-BoldCondensed_30_L2.raw  Roboto-BoldCondensed_30_L4.raw
SampleApp/Font/Test/Flash/: flash.map
SampleApp/Font/Test/Flash/data/: NotoSerifSC-VariableFont_wght_30_L1_ordinal.raw  NotoSerifSC-VariableFont_wght_30_L2.reloc
SampleApp/Font/Test/SDCard/: Roboto-BoldCondensed_30_L4.reloc
SampleApp/Lvds/: CMakeLists.txt  Readme.txt
SampleApp/Lvds/Hdr/: Lvds.h
SampleApp/Lvds/Project/Msvc/: Lvds_MSVC.sln  Lvds_Msvc.vcxproj  Lvds_Msvc.vcxproj.filters
SampleApp/Lvds/Src/: Lvds.c
SampleApp/Lvdsrx/: Readme.txt
SampleApp/Lvdsrx/Hdr/: Lvdsrx.h
SampleApp/Lvdsrx/Project/Msvc/: Lvdsrx_MSVC.sln  Lvdsrx_Msvc.vcxproj  Lvdsrx_Msvc.vcxproj.filters
SampleApp/Lvdsrx/Src/: Lvdsrx.c
SampleApp/Primitives/: Readme.txt
SampleApp/Primitives/Hdr/: Primitives.h
SampleApp/Primitives/Project/Msvc/: Primitives_MSVC.sln  Primitives_Msvc.vcxproj  Primitives_Msvc.vcxproj.filters
SampleApp/Primitives/Src/: Primitives.c
SampleApp/Sound/: CMakeLists.txt  Readme.txt
SampleApp/Sound/Hdr/: Sound.h
SampleApp/Sound/Project/Msvc/: Sound_MSVC.sln  Sound_Msvc.vcxproj  Sound_Msvc.vcxproj.filters
SampleApp/Sound/Src/: Sound.c
SampleApp/Touch/: CMakeLists.txt  Readme.txt
SampleApp/Touch/Hdr/: Touch.h
SampleApp/Touch/Project/Msvc/: Touch_MSVC.sln  Touch_Msvc.vcxproj  Touch_Msvc.vcxproj.filters
SampleApp/Touch/Src/: Patch_Base_Touch.c  Touch.c  base.c
SampleApp/Touch/Test/: yellow_66x66_YCBCR.raw
SampleApp/Utility/: Readme.txt
SampleApp/Utility/Hdr/: Utility.h
SampleApp/Utility/Project/Msvc/: Utility_MSVC.sln  Utility_Msvc.vcxproj  Utility_Msvc.vcxproj.filters
SampleApp/Utility/Src/: Utility.c
SampleApp/Utility/Test/: case_184x192_ASTC_8X8.raw  case_184x192_ASTC_8X8_z_0xaa.raw  mandrill256_256x256_RGB8.raw  mandrill256_256x256_RGB8_z_0xaa.raw  mandrill256_256x256_YCBCR.zlib
SampleApp/Utility/Test/Flash/: flash.map
SampleApp/Video/: CMakeLists.txt  Readme.txt
SampleApp/Video/Hdr/: Video.h
SampleApp/Video/Project/Msvc/: Video_MSVC.sln  Video_Msvc.vcxproj  Video_Msvc.vcxproj.filters
SampleApp/Video/Src/: Video.c
SampleApp/Video/Test/Flash/: flash.map
SampleApp/Widget/: CMakeLists.txt  Readme.txt
SampleApp/Widget/Hdr/: Widget.h  base.h
SampleApp/Widget/Project/Msvc/: Widget_MSVC.sln  Widget_Msvc.vcxproj  Widget_Msvc.vcxproj.filters
SampleApp/Widget/Src/: Widget.c  base.c
SampleApp/Widget/Test/: Lenna_40x40_RGB8.raw
common/: CMakeLists.txt  Readme.txt
common/application/: Common.c  Common.h  FileIo.c  FileTransfer.c  FileTransfer.h  FlashHelper.c  FlashHelper.h  Maths.c  Maths.h  PatchDefault.c  PatchDefault.h
common/eve_flash/: bt82x.blob
common/eve_hal/: CMakeLists.txt  EVE_Cmd.c  EVE_Cmd.h  EVE_CoCmd.c  EVE_CoCmd.h  EVE_CoCmd_IO.c  EVE_CoCmd_State.c  EVE_CoCmd_Widgets.c  EVE_CoDl.h  EVE_Config.h  EVE_FlashHelper.h  EVE_GpuDefs.h  EVE_GpuTypes.h  EVE_Hal.c  (+24 more)
(+763 files in other folders)
